--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Profile with overview and edit - Bootdey.com</title>
+      <title>Very importante site</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
@@ -14,32 +14,8 @@
             <div class="row">
                <div class="col-md-3">
                   <section class="panel">
-                     <div class="panel-body noradius padding-10">
-                        <figure class="margin-bottom-10">
-                           <img class="img-responsive" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt>
-                        </figure>
-                        <hr class="half-margins">
-                        <h3 class="text-black">
-                           Guest
-                        </h3>
-                        <p class="size-12">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam tincidunt erat volutpat laoreet dolore magna aliquam tincidunt erat volutpat.</p>
-                        <hr class="half-margins">
-                        <h6>Follow Me</h6>
-                        <a href="#" class="btn ico-only btn-facebook btn-xs" title="Facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="btn ico-only btn-twitter btn-xs" title="Twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="btn ico-only btn-google-plus btn-xs" title="Google plus"><i class="fa fa-google-plus"></i></a>
-                        <a href="#" class="btn ico-only btn-linkedin btn-xs" title="Linked In"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="btn ico-only btn-pinterest btn-xs" title="Pinterest"><i class="fa fa-pinterest"></i></a>
-                        <a href="#" class="btn ico-only btn-flickr btn-xs" title="Flickr"><i class="fa fa-flickr"></i></a>
-                        <a href="#" class="btn ico-only btn-tumblr btn-xs" title="Tumblr"><i class="fa fa-tumblr"></i></a>
-                        <a href="#" class="btn ico-only btn-skype btn-xs" title="Skype"><i class="fa fa-skype"></i></a>
-                        <a href="#" class="btn ico-only btn-stackoverflow btn-xs" title="Stack Overflow"><i class="fa fa-stack-overflow"></i></a>
-                        <a href="#" class="btn ico-only btn-instagram btn-xs" title="Instagram"><i class="fa fa-instagram"></i></a>
-                        <a href="#" class="btn ico-only btn-dribbble btn-xs" title="Dribble"><i class="fa fa-dribbble"></i></a>
-                        <a href="#" class="btn ico-only btn-youtube btn-xs" title="Youtube"><i class="fa fa-youtube"></i></a>
-                        <a href="#" class="btn ico-only btn-vimeo btn-xs" title="Vimeo"><i class="fa fa-vimeo-square"></i></a>
-                        <a href="#" class="btn ico-only btn-rss btn-xs" title="Rss"><i class="fa fa-rss"></i></a>
-                     </div>
+                    <a class="btn btn-primary" href="register.html" role="button">Sign up</a>
+                    <a class="btn btn-primary" href="login.html" role="button">Login</a>
                   </section>
                </div>
                <div class="col-md-5">
@@ -408,8 +384,5 @@
       </div>
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-      <script type="text/javascript">
-        
-      </script>
    </body>
 </html>
