--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
                <div class="col-md-3">
                   <section class="panel">
                     <a class="btn btn-primary" href="register.html" role="button">Sign up</a>
-                    <a class="btn btn-primary" href="login.html" role="button">Login</a>
+                    <a class="btn btn-primary" href="delete.html" role="button">Delete acount</a>
                   </section>
                </div>
                <div class="col-md-5">
