--- a/site/delete.html
+++ b/site/delete.html
@@ -16,8 +16,8 @@
                 <div class="card-body p-md-5">
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-                      <form class="mx-1 mx-md-4" method="GET" role="form" action="reg_me_pls">
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Delete acount</p>
+                      <form class="mx-1 mx-md-4" method="GET" role="form" action="del_me_pls">
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <input class="btn btn-primary btn-lg" type="submit" value="Sign up">
+                          <input class="btn btn-primary btn-lg" type="submit" value="Delete">
                         </div>
                       </form>
                     </div>
